--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
         <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>-->
     </head>
     <body>
-        <div id="content"></div>
+        <div id="appview"></div>
     </body>
 </html>
